--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "express": "^4.16.4"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-env": "^2.4.1",
+    "babel-loader": "^7.1.5",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "nodemon": "^1.18.6",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
@@ -22,8 +27,13 @@
     "webpack-node-externals": "^1.7.2"
   },
   "nodemonConfig": {
-    "watch": "./server",
-    "ignore": ["build/"],
-    "exec": "webpack --config webpack.config.server.js && node server/build/serverBundle.js"
+    "watch": [
+      "./server",
+      "./client/src"
+    ],
+    "ignore": [
+      "build/"
+    ],
+    "exec": "webpack --config webpack.config.server.js && webpack --config client/webpack.config.client.js && node server/build/serverBundle.js"
   }
 }
