--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-env": "^2.4.1",
     "babel-loader": "^7.1.5",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^1.0.1",
     "nodemon": "^1.18.6",
+    "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
