--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-dropzone": "^8.0.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
