--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
     "mongoose": "^5.3.14",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
