--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "node build/serverBundle.js",
+    "start": "node server/build/serverBundle.js",
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
